# Vantara

./: .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: db.rs  layout.rs  main.rs  models.rs  sessions.rs
apps/ui/: index.html  package.json
apps/ui/src/: App.tsx  index.css
apps/ui/src/components/: AppErrorBoundary.tsx  TerminalView.tsx
apps/ui/src/lib/: api.ts  desktop.ts  layout.ts  runtime.ts  terminalRegistry.ts
docs/: 01-product-definition.md  02-system-architecture.md  03-domain-model.md  04-ui-workspace-layout.md  05-terminal-runtime-and-renderer.md  06-ipc-events-and-commands.md  07-data-storage-and-state.md  08-security-permissions-and-reliability.md  09-repository-structure-and-standards.md  10-delivery-workstreams.md  11-ai-pane-creation-policy.md  12-portable-release-workflow.md  13-tmux-shim-integration.md  14-tmux-command-flags-and-compatibility-policy.md  15-tmux-implementation-backlog.md  README.md
docs/test/: conversation_log.md
scripts/: refresh-portable.ps1
