[package]
name = "workspace-terminal-desktop"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
portable-pty = "0.9.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.2", features = ["custom-protocol"] }
tauri-plugin-dialog = "2.4.0"
thiserror = "2.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
