[package]
name = "workspace-terminal-desktop"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
sha2 = "0.10"
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
arboard = "3.6.1"
portable-pty = "0.9.0"
png = "0.17.16"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.2", features = ["custom-protocol"] }
tauri-plugin-dialog = "2.4.0"
tiny_http = "0.12"
thiserror = "2.0"
ureq = { version = "2.12.1", features = ["json"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_UI_Shell"] }
